@@ -1,5 +1,6 @@
 4.8.3:
   * "bsddb.h" inclusion in PYPI is inconsistent. Solved.
+  * Support for "DB_ENV->mutex_stat()".
 
 4.8.2:
   * Support for "DB_OVERWRITE_DUP", "DB_FOREIGN_ABORT",
